--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,20 +1,19 @@
-body {
+body,
+html,
+* {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: red;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3.2rem;
   line-height: 8rem;
 }
 
-.object {
-  background-color: aqua;
-  margin: 100px;
-}
 
 /* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -31,4 +30,4 @@ h1 {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-} */
+} 
